--- a/static/admin.html
+++ b/static/admin.html
@@ -199,6 +199,9 @@
         <div class="admin-header">
             <h1>🛡️ Admin Dashboard</h1>
             <p id="admin-info">Loading...</p>
+            <button onclick="window.location.href='/app'" style="margin-top: 10px; padding: 10px 20px; background: var(--accent-primary); color: white; border: none; border-radius: var(--radius-md); cursor: pointer;">
+                ← Back to App
+            </button>
         </div>
 
         <div class="stats-grid">
