--- a/static/app.html
+++ b/static/app.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="/static/css/style.css">
-    <!-- Supabase SDK -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <!-- Supabase SDK v2 -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.0/dist/umd/supabase.js"></script>
 </head>
 
 <body class="app-page">
@@ -255,6 +255,70 @@
             <div class="modal-actions">
                 <button class="btn-modal-accept" id="modal-accept-btn">Accept</button>
                 <button class="btn-modal-decline" id="modal-decline-btn">Decline</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Username Setup Modal (for Google sign-in) -->
+    <div class="modal-overlay" id="username-setup-modal" style="display: none;">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Choose Your Username</h3>
+            </div>
+            <div class="modal-body">
+                <p style="color: #888; margin-bottom: 20px;">Pick a unique username to get started</p>
+                <div class="form-group">
+                    <label for="setup-username">Username</label>
+                    <input type="text" id="setup-username" placeholder="Enter username" minlength="3" maxlength="20" required>
+                    <small style="color: #666; font-size: 12px;">3-20 characters, letters and numbers only</small>
+                </div>
+                <div id="username-error" style="color: #ff4444; margin-top: 10px; display: none;"></div>
+            </div>
+            <div class="modal-actions">
+                <button class="btn-modal-accept" id="confirm-username-btn">Continue</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Profile Edit Modal -->
+    <div class="modal-overlay" id="profile-edit-modal" style="display: none;">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Edit Profile</h3>
+                <button class="btn-close" onclick="closeProfileEditModal()">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <line x1="18" y1="6" x2="6" y2="18" />
+                        <line x1="6" y1="6" x2="18" y2="18" />
+                    </svg>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="profile-avatar-upload">
+                    <div class="avatar-preview" id="avatar-preview">
+                        <img id="avatar-preview-img" src="" alt="Avatar" style="display: none;">
+                        <span id="avatar-preview-text">?</span>
+                    </div>
+                    <input type="file" id="avatar-upload" accept="image/*" style="display: none;">
+                    <button class="btn-upload" onclick="document.getElementById('avatar-upload').click()">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16">
+                            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+                            <polyline points="17 8 12 3 7 8"/>
+                            <line x1="12" y1="3" x2="12" y2="15"/>
+                        </svg>
+                        Upload Photo
+                    </button>
+                    <small style="color: #666; font-size: 12px; display: block; margin-top: 8px;">Max 5MB</small>
+                </div>
+                <div class="form-group" style="margin-top: 20px;">
+                    <label for="edit-username">Username</label>
+                    <input type="text" id="edit-username" placeholder="Enter new username" minlength="3" maxlength="20" required>
+                    <small style="color: #666; font-size: 12px;">3-20 characters</small>
+                </div>
+                <div id="profile-error" style="color: #ff4444; margin-top: 10px; display: none;"></div>
+            </div>
+            <div class="modal-actions">
+                <button class="btn-modal-decline" onclick="closeProfileEditModal()">Cancel</button>
+                <button class="btn-modal-accept" id="save-profile-btn">Save Changes</button>
             </div>
         </div>
     </div>
