--- a/static/app.html
+++ b/static/app.html
@@ -324,6 +324,7 @@
     </div>
 
     <script src="/static/js/supabase-config.js"></script>
+    <script src="/static/js/websocket.js"></script>
     <script src="/static/js/app.js"></script>
 </body>
 
