--- a/static/app.html
+++ b/static/app.html
@@ -172,7 +172,7 @@
                             <polyline points="15 18 9 12 15 6" />
                         </svg>
                     </button>
-                    <div class="chat-user">
+                    <div class="chat-user" id="chat-user-info" style="cursor: pointer;">
                         <div class="avatar">
                             <span id="chat-avatar">?</span>
                             <span class="online-indicator" id="chat-online-indicator"></span>
@@ -236,6 +236,13 @@
 
     <!-- Context Menu for Messages -->
     <div class="context-menu" id="message-context-menu" style="display: none;">
+        <button class="context-menu-item" id="reply-message-btn">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <polyline points="9 14 4 9 9 4"/>
+                <path d="M20 20v-7a4 4 0 0 0-4-4H4"/>
+            </svg>
+            Reply
+        </button>
         <button class="context-menu-item" id="edit-message-btn">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/>
@@ -405,6 +412,47 @@
             <div class="modal-actions">
                 <button class="btn-modal-decline" onclick="closeProfileEditModal()">Cancel</button>
                 <button class="btn-modal-accept" id="save-profile-btn">Save Changes</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Group Settings Modal -->
+    <div class="modal-overlay" id="group-settings-modal" style="display: none;">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Group Settings</h3>
+                <button class="btn-close" onclick="closeGroupSettingsModal()">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <line x1="18" y1="6" x2="6" y2="18" />
+                        <line x1="6" y1="6" x2="18" y2="18" />
+                    </svg>
+                </button>
+            </div>
+            <div class="modal-body">
+                <input type="hidden" id="current-group-id" value="">
+                
+                <div class="form-group">
+                    <label for="group-settings-name">Group Name</label>
+                    <input type="text" id="group-settings-name" placeholder="Group name" maxlength="100">
+                    <button class="btn-modal-accept" onclick="updateGroupName()" style="margin-top: 8px; padding: 8px 16px; font-size: 14px;">Update Name</button>
+                </div>
+
+                <div class="form-group" style="margin-top: 20px;">
+                    <label>Members</label>
+                    <div id="group-members-list" style="max-height: 200px; overflow-y: auto; margin-bottom: 12px;">
+                        <!-- Members will be rendered here -->
+                    </div>
+                    <div style="display: flex; gap: 8px;">
+                        <input type="text" id="add-member-input" placeholder="Enter username" style="flex: 1; padding: 8px; border: 1px solid #ddd; border-radius: 8px;">
+                        <button class="btn-modal-accept" onclick="addMemberToGroup()" style="padding: 8px 16px; font-size: 14px;">Add</button>
+                    </div>
+                </div>
+
+                <div style="margin-top: 24px; padding-top: 24px; border-top: 1px solid #ddd;">
+                    <button class="btn-danger" onclick="deleteGroup()" style="width: 100%; padding: 12px; background: #ff4444; color: white; border: none; border-radius: 8px; cursor: pointer; font-weight: 600;">
+                        Delete Group
+                    </button>
+                </div>
             </div>
         </div>
     </div>
