--- a/static/app.html
+++ b/static/app.html
@@ -432,6 +432,25 @@
                 <input type="hidden" id="current-group-id" value="">
                 
                 <div class="form-group">
+                    <label for="group-avatar-upload">Group Avatar</label>
+                    <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 12px;">
+                        <div class="avatar" id="current-group-avatar" style="width: 64px; height: 64px; font-size: 24px;">
+                            <span>G</span>
+                        </div>
+                        <div style="flex: 1;">
+                            <input type="file" id="group-avatar-upload" accept="image/*" style="display: none;">
+                            <button class="btn-modal-accept" onclick="document.getElementById('group-avatar-upload').click()" style="padding: 8px 16px; font-size: 14px; margin-bottom: 4px;">
+                                Choose Image
+                            </button>
+                            <button class="btn-modal-accept" onclick="updateGroupAvatar()" style="padding: 8px 16px; font-size: 14px; background: #28a745;">
+                                Upload Avatar
+                            </button>
+                            <p style="font-size: 12px; color: #666; margin-top: 4px;">Max 5MB (JPG, PNG, GIF)</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
                     <label for="group-settings-name">Group Name</label>
                     <input type="text" id="group-settings-name" placeholder="Group name" maxlength="100">
                     <button class="btn-modal-accept" onclick="updateGroupName()" style="margin-top: 8px; padding: 8px 16px; font-size: 14px;">Update Name</button>
