--- a/static/app.html
+++ b/static/app.html
@@ -211,7 +211,7 @@
                                 <polyline points="21 15 16 10 5 21"/>
                             </svg>
                         </button>
-                        <input type="text" placeholder="Type a message..." id="message-input" autocomplete="off">
+                        <input type="text" placeholder="Type a message..." id="message-input" autocomplete="off" inputmode="text">
                         <button class="btn-send" id="send-btn">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <line x1="22" y1="2" x2="11" y2="13" />
